required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- Add argument check for processTemplate, processLegendTemplate and 
  processQueryTemplate in the C# bindings (#3699)

- Remove shapeObj.line, shapeObj.values, lineObj.point from the SWIG API 
  which are redundant and undocumented. (#3269)

- Remove map-oriented query modes (e.g. QUERYMAP). Use qformat parameter instead. (#3712)

- Implement single-pass query handling in mssql2008 driver as per RFC 65.

- Fixed Sql Server 2008 key column name truncation (#3654)

- Added label position binding (#3612) and label shadow size binding (#2924)

- Implement MS RFC 69: Support for clustering of features in point layers (#3700)

- Implement MS RFC 68: Support for combining features from multiple layers (#3674)

- Add support for WCS 1.1 Post (#3710)

- Fixed OGR query handling according to RFC 65 (#3647)

- Implement CLOSE_CONNECTION=ALWAYS to suppress the connection pooling
  for a particular layer.

- Implemented RFC 67: Enable/Disable layers in ogc web services (#3703)

- Class title can now be used in legends. It's value takes precedence over class name. Previously
  title was not used any place in the code but it is supported for read/write. (#3702)

- Allow definition of nodata attribute for layers without results (via resultset tag). (#3701)

- mapprojhack.c: restructure to avoid needing projects, or any internal 
  knowledge of PROJ.4.  

- Fix newlines around part boundaries in WCS multipart results (#3672)

- Added minfeaturesize support at layer or class level (#1340)

- Implemented support in for classifying rasters using the new
  expression parsing (msGetClass()...)  (#3663)
